[gd_scene load_steps=10 format=3 uid="uid://uxw8wt6hyl1w"]

[ext_resource type="Texture2D" uid="uid://dgpjniklsm6lm" path="res://hashrate.png" id="1_pm31e"]
[ext_resource type="Script" path="res://statsandactions.gd" id="1_rbd5i"]
[ext_resource type="Texture2D" uid="uid://c1lokkoupl4r8" path="res://cloud_down.png" id="2_wkpkb"]
[ext_resource type="Texture2D" uid="uid://b8jpw28f70luu" path="res://cloud_up.png" id="3_f43po"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fo4hm"]
atlas = ExtResource("1_pm31e")
region = Rect2(0, 0, 96, 76)

[sub_resource type="SpriteFrames" id="SpriteFrames_a7xn7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo4hm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_d8q0f"]
atlas = ExtResource("2_wkpkb")
region = Rect2(0, 0, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqgqg"]
atlas = ExtResource("3_f43po")
region = Rect2(0, 0, 60, 56)

[sub_resource type="SpriteFrames" id="SpriteFrames_fm7yt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8q0f")
}],
"loop": true,
"name": &"cloudoff",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqgqg")
}],
"loop": true,
"name": &"cloudon",
"speed": 5.0
}]

[node name="statsandactions" type="StaticBody2D"]
rotation = 0.000825922
script = ExtResource("1_rbd5i")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 1.34518
offset_top = 2.99889
offset_right = 398.345
offset_bottom = 417.999
color = Color(0.196078, 0.188235, 0.184314, 1)

[node name="hashrateicon" type="AnimatedSprite2D" parent="."]
position = Vector2(118.845, 63.0185)
scale = Vector2(0.802084, 0.763158)
sprite_frames = SubResource("SpriteFrames_a7xn7")

[node name="hashrate" type="RichTextLabel" parent="."]
offset_left = 88.3452
offset_top = 86.9989
offset_right = 164.345
offset_bottom = 115.999
text = "Hashrate
"

[node name="cloudstatusicon" type="AnimatedSprite2D" parent="."]
position = Vector2(250.345, 63.9989)
sprite_frames = SubResource("SpriteFrames_fm7yt")
animation = &"cloudon"

[node name="clouduptime" type="RichTextLabel" parent="."]
offset_left = 202.345
offset_top = 88.9989
offset_right = 328.345
offset_bottom = 128.999
text = "Active GPUs"

[node name="hashratevalue" type="RichTextLabel" parent="."]
offset_left = 77.3452
offset_top = 110.999
offset_right = 175.345
offset_bottom = 150.999
text = "uytfiuftiutf"

[node name="clouduptimevalue" type="RichTextLabel" parent="."]
offset_left = 215.345
offset_top = 111.999
offset_right = 322.345
offset_bottom = 151.999
text = "23456677"

[node name="upgrademinerstext" type="RichTextLabel" parent="."]
offset_left = 67.3452
offset_top = 172.999
offset_right = 338.345
offset_bottom = 204.999
text = "Upgrade Miners						100"

[node name="upgrademinerstext2" type="RichTextLabel" parent="."]
offset_left = 68.3452
offset_top = 233.999
offset_right = 339.345
offset_bottom = 265.999
text = "Maintenance							100"

[node name="upgrademinerstext3" type="RichTextLabel" parent="."]
offset_left = 69.3452
offset_top = 292.999
offset_right = 338.345
offset_bottom = 324.999
text = "Fix issue					      	            100"

[node name="upgrademinerstext4" type="RichTextLabel" parent="."]
offset_left = 72.3452
offset_top = 354.999
offset_right = 343.345
offset_bottom = 386.999
text = "Check    			  						   		0"
scroll_active = false

[node name="upgrademiners" type="Button" parent="."]
offset_left = 55.3452
offset_top = 162.999
offset_right = 343.345
offset_bottom = 209.999

[node name="maintenance" type="Button" parent="."]
offset_left = 55.3452
offset_top = 222.999
offset_right = 344.345
offset_bottom = 271.999

[node name="fix" type="Button" parent="."]
offset_left = 56.3452
offset_top = 284.999
offset_right = 345.345
offset_bottom = 333.999

[node name="check" type="Button" parent="."]
offset_left = 56.3452
offset_top = 345.999
offset_right = 345.345
offset_bottom = 394.999

[node name="name" type="RichTextLabel" parent="."]
offset_left = 5.34518
offset_top = 12.9989
offset_right = 147.345
offset_bottom = 52.9989
text = "Brownbear"

[connection signal="pressed" from="upgrademiners" to="." method="_on_upgrademiners_pressed"]
[connection signal="pressed" from="maintenance" to="." method="_on_maintenance_pressed"]
[connection signal="pressed" from="fix" to="." method="_on_fix_pressed"]
[connection signal="pressed" from="check" to="." method="_on_check_pressed"]
